# PPO-v3

./: .gitignore  HNS.csv  README.md  hello_world.py  loo_dmc.sh  ppov3.slurm_template  ppov3torch.slurm_template  pyproject.toml  run_loo_trick_sweep.sh  run_testing_sweep.sh  run_trick_sweep.sh  run_trick_sweep_dmc.sh  switch.py  test.sh  tune_hypers.py  tune_ppo_atari_envpool.py
cleanrl_utils/: benchmark.py  rlops_hns.py  tuner.py
ppo-v3/: ppo_atari_envpool.py
ppo_v3/: HNS.csv  flatten.py  human_normalized_scores.py  ppo_atari_envpool.py  ppo_atari_envpool_XL.py  ppo_atari_envpool_async.py  ppo_atari_envpool_async_ddp.py  ppo_atari_envpool_async_ddp_resnet.py  ppo_atari_envpool_async_dist.py  ppo_atari_envpool_async_dist_resnet.py  ppo_atari_envpool_async_resnet.py  ppo_atari_envpool_resnet.py  ppo_atari_envpool_resnet_200M.py  ppo_dmc_envpool.py  ppo_envpool_tricks.py  ppo_envpool_tricks_arch.py  ppo_envpool_tricks_arch_100M.py  ppo_envpool_tricks_arch_10M.py  ppo_envpool_tricks_arch_XL.py  ppo_envpool_tricks_criticdebug.py  ppo_envpool_tricks_dmc.py  ppo_envpool_tricks_dmc_gae_percentile.py  ppo_envpool_tricks_fullscaleadv.py  ppo_envpool_tricks_norewardclip_XL.py  ppo_envpool_tricks_resnet.py  ppo_envpool_tricks_scaleadv.py  ppo_envpool_tricks_symlog2.py  ppo_tricks.py  test.ipynb
static/: cleanrl_vs_baselines.md  dmc.md
