[tool.poetry]
name = "ppo_v3"
version = "0.1.0"
description = ""
authors = ["Costa Huang <costa.huang@outlook.com>"]
readme = "README.md"
packages = [
    { include = "ppo_v3" },
    { include = "cleanrl_utils" },
]

[tool.poetry.dependencies]
python = "^3.8"
envpool = "^0.8.1"
tensorboard = "^2.12.0"
gymnasium = "^0.27.1"
gym = "0.23.1"
wandb = "^0.13.10"
huggingface-hub = "^0.12.1"
moviepy = "^1.0.3"
openrlbenchmark = "^0.1.1b1"
pre-commit = "^3.0.4"
torch = ">=1.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

